force-app/main/default/objects/Board_Members__c/Board_Members__c.object-meta.xml
<CustomObject>
    <label>Board Member</label>
    <nameField>
        <displayFormat>BDM-{00000}</displayFormat>
        <label>Board Members Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Board Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>