force-app/main/default/objects/Board_Members__c/fields/Annual_Board_Pledge_Document_On_File__c.field-meta.xml
<CustomField>
    <fullName>Annual_Board_Pledge_Document_On_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Annual Board Pledge Document On File</label>
    <type>Checkbox</type>
</CustomField>