force-app/main/default/objects/Board_Members__c/fields/Board_Committee1__c.field-meta.xml
<CustomField>
    <fullName>Board_Committee1__c</fullName>
    <inlineHelpText>Select 1st committee this person is serving on</inlineHelpText>
    <label>Board Committee1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Board_Committee</valueSetName>
    </valueSet>
</CustomField>