force-app/main/default/objects/Board_Members__c/fields/Board_Committee3__c.field-meta.xml
<CustomField>
    <fullName>Board_Committee3__c</fullName>
    <inlineHelpText>Select 3rd committee this person is serving on</inlineHelpText>
    <label>Board Committee3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Board_Committee</valueSetName>
    </valueSet>
</CustomField>