force-app/main/default/objects/Board_Members__c/fields/Board_Pledge_Paid__c.field-meta.xml
<CustomField>
    <fullName>Board_Pledge_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the board member has fully paid their annual board pledge.</description>
    <label>Board Pledge Paid</label>
    <type>Checkbox</type>
</CustomField>