force-app/main/default/objects/Board_Members__c/fields/Board_Title__c.field-meta.xml
<CustomField>
    <fullName>Board_Title__c</fullName>
    <label>Board Title</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Calendar_Year__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>President</fullName>
            </value>
            <value>
                <fullName>Vice President</fullName>
            </value>
            <value>
                <fullName>Treasurer</fullName>
            </value>
            <value>
                <fullName>Secretary</fullName>
            </value>
            <value>
                <fullName>Board Director</fullName>
            </value>
            <value>
                <fullName>Board Director-Affiliate Representative</fullName>
            </value>
            <value>
                <fullName>Executive Director-Affiliate Representative</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>Past Presiding President</fullName>
            </value>
            <value>
                <fullName>General Counsel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>