force-app/main/default/objects/Board_Members__c/fields/Calendar_Year__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Year__c</fullName>
    <label>Calendar Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2027</fullName>
            </value>
            <value>
                <fullName>2026</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2022</fullName>
            </value>
            <value>
                <fullName>2021</fullName>
            </value>
            <value>
                <fullName>2020</fullName>
            </value>
            <value>
                <fullName>2019</fullName>
            </value>
            <value>
                <fullName>2018</fullName>
            </value>
            <value>
                <fullName>2017</fullName>
            </value>
            <value>
                <fullName>2016</fullName>
            </value>
            <value>
                <fullName>2015</fullName>
            </value>
            <value>
                <fullName>2014</fullName>
            </value>
            <value>
                <fullName>2013</fullName>
            </value>
            <value>
                <fullName>2012</fullName>
            </value>
            <value>
                <fullName>2011</fullName>
            </value>
            <value>
                <fullName>2010</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>