force-app/main/default/objects/Board_Members__c/fields/Chair_1__c.field-meta.xml
<CustomField>
    <fullName>Chair_1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if member is committee Chair</description>
    <inlineHelpText>Is this member the Chair of Committee1?</inlineHelpText>
    <label>Chair 1</label>
    <type>Checkbox</type>
</CustomField>