force-app/main/default/objects/Board_Members__c/fields/Chair_2__c.field-meta.xml
<CustomField>
    <fullName>Chair_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if member is committee Chair</description>
    <inlineHelpText>Is this member the Chair of Committee2?</inlineHelpText>
    <label>Chair 2</label>
    <type>Checkbox</type>
</CustomField>