force-app/main/default/objects/Board_Members__c/fields/Chair_3__c.field-meta.xml
<CustomField>
    <fullName>Chair_3__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if member is committee Chair</description>
    <inlineHelpText>Is this member the Chair of Committee3?</inlineHelpText>
    <label>Chair 3</label>
    <type>Checkbox</type>
</CustomField>