force-app/main/default/objects/Board_Members__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Board Members</relationshipLabel>
    <relationshipName>Board_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>