force-app/main/default/objects/Board_Members__c/recordTypes/Board_Member.recordType-meta.xml
<RecordType>
    <fullName>Board_Member</fullName>
    <active>true</active>
    <label>Board Member</label>
</RecordType>