force-app/main/default/objects/Board_Members__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Calendar_Year__c</columns>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Board_Start_Date__c</columns>
    <columns>Board_End_Date__c</columns>
    <columns>Annual_Board_Conflict_Document_On_File__c</columns>
    <columns>Annual_Board_Pledge_Document_On_File__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>